Refactor string handling and improve readability in various classes
- Updated string checks to use trim().isEmpty() for better handling of whitespace in HttpLogData.java, AbstractHttpLogFormatter.java, TextHttpLogFormatter.java, and HttpServerAdapter.java.
- Changed Optional checks from isEmpty() to isPresent() for clarity in HttpTiming.java and JsonHttpLogFormatter.java.
- Enhanced the CachedBodyHttpServletRequest class to read input streams more efficiently.
- Refactored response construction in SpringBootServerDemo.java to use HashMap for better clarity and flexibility.